# rust-grope

./: .gitignore
main/01_guessing_game/: Cargo.toml
main/01_guessing_game/src/: main.rs
main/02_dining_philosophers/: Cargo.toml
main/02_dining_philosophers/src/: main.rs
main/03_variable_bindings/: Cargo.toml
main/03_variable_bindings/src/: main.rs
main/04_mutability/: Cargo.toml
main/04_mutability/examples/: 0.advanced_copy_auto.rs  1.advanced_copy.rs  advanced_copy.rs  advanced_copy_auto.rs  advanced_move.rs
main/04_mutability/src/: main.rs
main/05_borrowing/: Cargo.toml
main/05_borrowing/examples/: 0.borrowing.rs  1.mutability_borrowing.rs  2.borrowing_and_mutability_borrowing.rs  3.borrowing_and_mutability_borrowing.rs
main/05_borrowing/src/: main.rs
main/05_closure/: Cargo.toml
main/05_closure/examples/: 0.copy_closure.rs  1.copy_closure_move.rs  2.compare_copy_closure.rs  3.none_copy_closure.rs  4.none_copy_closure_move.rs  5.compare_none_copy_closure.rs  compare_copy_closure.rs  compare_none_copy_closure.rs  copy_closure.rs  copy_closure_move.rs  none_copy_closure.rs  none_copy_closure_move.rs
main/05_closure/src/: main.rs
main/06_array_string/: Cargo.toml
main/06_closure/: Cargo.toml  readme.md
main/06_closure/examples/: 0.copy_closure.rs  1.copy_closure_move.rs  2.compare_copy_closure.rs  3.none_copy_closure.rs  4.none_copy_closure_move.rs
main/06_closure/src/: main.rs
main/07_array_string/: Cargo.toml
main/07_array_string/src/: main.rs
main/07_borrowing/: Cargo.toml
main/07_borrowing/examples/: 0.borrowing.rs  1.mutability_borrowing.rs  2.borrowing_and_mutability_borrowing.rs  3.borrowing_and_mutability_borrowing.rs
main/07_borrowing/src/: main.rs
main/07_three_iterators/: Cargo.toml  readme.md
main/07_three_iterators/examples/: 0.iter.rs  0.params_of_closure.rs  1.iter.rs  1.iter_mut.rs  2.into_iter.rs  2.iter_mut.rs  4.clone_into_iter.rs  5.cloned_take.rs  5.for_loop.rs
main/07_three_iterators/src/: main.rs
main/08_Newton_method/: Cargo.toml
main/08_Newton_method/src/: main.rs
main/09_closufe_and_generic/: Cargo.toml
main/09_closufe_and_generic/examples/: 2.use_FnBox.rs
main/09_closure_and_generic/: Cargo.toml
main/09_closure_and_generic/examples/: 0.pass_closure_as_params.rs  1.return_closure.rs  2.use_FnBox.rs
main/09_closure_and_generic/src/: main.rs
main/10_closure_with_lifetime/: Cargo.toml
main/10_closure_with_lifetime/src/: main.rs
main/11_dead_code/: Cargo.toml
main/11_dead_code/examples/: 0.add_allow.rs  1.add_allow_top.rs
main/11_dead_code/src/: main.rs
main/12_Box/: Cargo.toml
main/12_Box/examples/: 0.stack_and_heap.rs  1.Box.rs
main/13_thread/: Cargo.toml
main/13_thread/examples/: 0.start_thread.rs  1.change_data.rs  2.safe_shared_mutable.rs
main/14_Sized/: Cargo.toml
main/14_Sized/examples/: 0.array.rs  1.dynamic_sized_type.rs  2.zero_sized_type.rs  3.transmute.rs
