[package]
name = "06_closure"
version = "0.1.0"
authors = ["shangfeiSF <tony20100125@126.com>"]

[[example]]
name = "0"
path = "examples/0.copy_closure.rs"

[[example]]
name = "1"
path = "examples/1.copy_closure_move.rs"

[[example]]
name = "2"
path = "examples/2.compare_copy_closure.rs"

[[example]]
name = "3"
path = "examples/3.none_copy_closure.rs"

[[example]]
name = "4"
path = "examples/4.none_copy_closure_move.rs"

[[example]]
name = "5"
path = "examples/5.compare_none_copy_closure.rs"